--- a/FrontEnd/planejamento.html
+++ b/FrontEnd/planejamento.html
@@ -1,82 +1,84 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Planejamento Financeiro - LIA</title>
-    <link rel="stylesheet" href="css/styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>LIA - Planejamento Financeiro Inteligente</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <style>
+    .meta-card {
+      background-color: #ffffff;
+      border-left: 5px solid #006400;
+      padding: 15px;
+      border-radius: 10px;
+      margin: 10px 0;
+      box-shadow: 0 3px 6px rgba(0,0,0,0.1);
+    }
+
+    .meta-card p {
+      margin: 5px 0;
+    }
+
+    .prioridade-alta {
+      color: red;
+      font-weight: bold;
+    }
+
+    .prioridade-media {
+      color: orange;
+    }
+
+    .prioridade-baixa {
+      color: gray;
+    }
+  </style>
 </head>
 <body>
 
-    <!-- Cabeçalho -->
-    <header class="header">
-        <img src="images/lia.png" alt="Logo LIA" class="logo">
-        <nav class="nav">
-            <button class="nav-button" onclick="window.location.href='dashboard.html'">🏠 Dashboard</button>
-        </nav>
-    </header>
+<header class="header">
+  <img src="images/lia.png" alt="Logo LIA" class="logo">
+  <nav class="nav">
+    <button class="nav-button" onclick="window.location.href='dashboard.html'">🏠 Dashboard</button>
+  </nav>
+</header>
 
-    <!-- Conteúdo Principal -->
-    <main class="main-content">
-        <h1>📅 Planejamento Financeiro</h1>
-        <p>Organize suas metas e visualize seu crescimento financeiro.</p>
+<main class="main-content">
+  <h1>📦 Planejamento Financeiro Inteligente</h1>
+  <p>Defina suas metas e deixe a LIA ajudar você a alcançá-las!</p>
 
-        <section class="finance-section">
-            <h2>🎯 Definir Metas</h2>
-            <div class="goal-inputs">
-                <input type="text" id="goal-name" class="input-field" placeholder="Nome da Meta">
-                <input type="number" id="goal-value" class="input-field" placeholder="Valor necessário (R$)">
-                <button class="cta-button" onclick="adicionarMeta()">➕ Adicionar Meta</button>
-            </div>
+  <section class="finance-section">
+    <h2>💰 Quanto você pode guardar por mês?</h2>
+    <input type="number" id="valor-mensal" class="input-field" placeholder="Ex: 500" />
+  </section>
 
-            <ul id="goal-list" class="list"></ul>
-        </section>
+  <section class="finance-section">
+    <h2>🎯 Adicionar Meta</h2>
+    <div class="goal-inputs">
+      <input type="text" id="nome-meta" class="input-field" placeholder="Nome da Meta">
+      <input type="number" id="valor-meta" class="input-field" placeholder="Valor Total da Meta (R$)">
+      <input type="number" id="prazo-meta" class="input-field" placeholder="Prazo (em meses)">
+      <select id="prioridade-meta" class="input-field">
+        <option value="">Selecione a prioridade</option>
+        <option value="alta">Alta</option>
+        <option value="media">Média</option>
+        <option value="baixa">Baixa</option>
+      </select>
+      <button class="cta-button" onclick="adicionarMeta()">➕ Adicionar</button>
+    </div>
+  </section>
 
-        <section class="finance-section">
-            <h2>💵 Simular Saldo Futuro</h2>
-            <div class="budget-inputs">
-                <input type="number" id="budget-inicial" class="input-field" placeholder="Saldo Inicial (R$)">
-                <input type="number" id="budget-mensal" class="input-field" placeholder="Aporte Mensal (R$)">
-                <input type="number" id="budget-meses" class="input-field" placeholder="Duração (meses)">
-                <button class="cta-button" onclick="simularSaldo()">📊 Simular</button>
-            </div>
-            <p id="budget-result"></p>
-        </section>
-    </main>
+  <section class="finance-section">
+    <h2>📋 Suas Metas</h2>
+    <div id="lista-metas"></div>
+    <button class="cta-button" onclick="calcularDistribuicao()">📊 Calcular Distribuição</button>
+  </section>
+</main>
 
-    <footer class="footer">
-        <p>&copy; 2025 LIA - Assistente Financeiro. Todos os direitos reservados.</p>
-    </footer>
+<footer class="footer">
+  <p>&copy; 2025 LIA - Assistente Financeiro. Todos os direitos reservados.</p>
+</footer>
 
-    <!-- Scripts -->
-    <script>
-        function adicionarMeta() {
-            const nome = document.getElementById('goal-name').value;
-            const valor = document.getElementById('goal-value').value;
-            if (nome && valor) {
-                const li = document.createElement('li');
-                li.textContent = `${nome}: R$${parseFloat(valor).toFixed(2)}`;
-                document.getElementById('goal-list').appendChild(li);
-                document.getElementById('goal-name').value = '';
-                document.getElementById('goal-value').value = '';
-            } else {
-                alert('⚠️ Preencha todos os campos!');
-            }
-        }
-
-        function simularSaldo() {
-            const inicial = parseFloat(document.getElementById('budget-inicial').value);
-            const mensal = parseFloat(document.getElementById('budget-mensal').value);
-            const meses = parseInt(document.getElementById('budget-meses').value);
-
-            if (!isNaN(inicial) && !isNaN(mensal) && !isNaN(meses)) {
-                let saldo = inicial + (mensal * meses);
-                document.getElementById('budget-result').textContent = `Saldo estimado: R$${saldo.toFixed(2)}`;
-            } else {
-                alert('⚠️ Preencha todos os campos!');
-            }
-        }
-    </script>
+<script src="scripts.js"></script>
 
 </body>
 </html>
