--- a/FrontEnd/planejamento.html
+++ b/FrontEnd/planejamento.html
@@ -31,6 +31,36 @@
     .prioridade-baixa {
       color: gray;
     }
+
+    .btn-retirar, .btn-analisar {
+      background-color: #006400;
+      color: white;
+      border: none;
+      padding: 6px 12px;
+      margin: 8px 5px 0 0;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .btn-retirar {
+      background-color: #cc0000;
+    }
+
+    .btn-retirar:hover {
+      background-color: #a30000;
+    }
+
+    .btn-analisar:hover {
+      background-color: #004d00;
+    }
+
+    .analise-feedback {
+      margin-top: 8px;
+      font-size: 0.9em;
+      background-color: #f0f0f0;
+      padding: 10px;
+      border-radius: 8px;
+    }
   </style>
 </head>
 <body>
